cmake_minimum_required(VERSION 3.26)
project(Contenedores_Din_micos)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ej1_Vector_e_Iteradores "Ej1 Vector e Iteradores.cpp")

add_executable(Ej2_Contenedores_Estandar_y_Secuencias "Ej2 Contenedores Estándar y Secuencias.cpp")

add_executable(Ej3_Algoritmos "Ej3 Algoritmos.cpp")

add_executable(Ej_4_Calculo_numerico "Ej 4 Calculo numerico.cpp")

add_executable(Ej5_C++_Moderno "Ej5 C++ Moderno.cpp")

add_executable(Ej6_Introduccion_a_Boost "Ej6 Introduccion a Boost.cpp")